update metadata Added archival cover. tag 0.1.0

--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,11 +1,16 @@
 _repo: The-sinking-of-the-Titanic-and-other-poems_69761
 _version: 0.1.0
+covers:
+- cover_type: archival
+  image_path: 69761-h/images/cover.jpg
 creator:
   author:
     agent_name: Stahl, C. Victor
     gutenberg_agent_id: '55407'
     url: http://www.gutenberg.org/2009/agents/55407
 description: ''
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/69761#The-sinking-of-the-Titanic-and-other-poems
 gutenberg_issued: '2023-01-10'
 identifiers:
   gutenberg: '69761'
